--- a/Pages/CAF_Ovar.css
+++ b/Pages/CAF_Ovar.css
@@ -161,6 +161,13 @@ h2 {
     font-size: 0;
 }
 
+footer {
+    background: #007bff;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+}
+
 /* Responsive Design */
 @media (max-width: 768px) {
     .about-content {
